--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -126,11 +126,11 @@
 						<div class="row">
 							<div id="urlForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">系所中文網站網址*</label>
-								<input type="text" class="form-control required" id="url">
+								<input type="text" class="form-control " id="url">
 							</div>
 							<div id="engUrlForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">系所英文網站網址*</label>
-								<input type="text" class="form-control required" id="engUrl">
+								<input type="text" class="form-control " id="engUrl">
 							</div>
 						</div>
 						<div class="row">
@@ -179,13 +179,13 @@
 							<div id="descriptionForm" class="form-group col">
 								<label class="form-control-label text-danger" for="">中文系所分則*</label><br />
                                 (可填寫是否提供身心障礙學生學習輔具資源及生活照輔措施等資源，以利學生先行了解並自行評估)<br />
-								<textarea class="form-control required" rows="4" id="description"></textarea>
+								<textarea class="form-control " rows="4" id="description"></textarea>
 							</div>
 						</div>
 						<div class="row">
 							<div id="engDescriptionForm" class="form-group col">
 								<label class="form-control-label text-danger" for="">英文系所分則*</label>
-								<textarea class="form-control required" rows="4" id="engDescription"></textarea>
+								<textarea class="form-control" rows="4" id="engDescription"></textarea>
 							</div>
 						</div>
 
