學士班多調查是否餘額留用 & 系鎖定不能再作儲存

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -183,6 +183,7 @@
 					<th>代碼</th>
 					<th>名稱</th>
 					<th style="width: 150px;">個人申請人數</th>
+					<th style="width: 100px;">餘額留用</th>
 					<th style="width: 150px;">聯合分發人數</th>
 					<th style="width: 100px;">參考值 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="聯合分發人數不得低於參考值"></i></th>
 					<th style="width: 150px;">減招原因</th>
