下載學校清冊Excel

--- a/index.ejs
+++ b/index.ejs
@@ -6,6 +6,11 @@
 				<input type="text" id="schoolId" class="form-control" disabled>
 			</div>
 		</div>
+		<div class="col-3 offset-3 text-center float-right">
+			<button class="btn btn-success btn-lg" id="downloadExcel">
+				下載學校清冊 Excel
+			</button>
+		</div>
 	</div>
 	<div class="row">
 		<div class="form-group col-6">
