--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -14,9 +14,12 @@
 			寄送正式版 PDF
 		</button>
 
-		<button class="btn btn-danger tooltip-wrapper" id="lockSystem-btn" title="請先鎖定學校資料！" >
-			確認送出並鎖定
-		</button>
+		<span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="請先鎖定學校資料！" id="lockSystem-tooltip">
+			<button class="btn btn-danger " id="lockSystem-btn" >
+				確認送出並鎖定
+			</button>
+		</span>
+
 
 	</div>
 </div>
