--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -400,7 +400,7 @@
 
 											<div class="row">
 												<div class="col-12">
-													<div class="form-group">
+													<div class="form-group" v-bind:class="{'has-danger': type.engerror}">
 														<label for="">審查項目英文說明</label>
 														<textarea class="form-control" rows="3" v-model="type.eng_description"></textarea>
 													</div>
