所有班別的系所資料編輯新增「是否經教育部查核被列為持續列管或不通過」及「師資質量是否達「專科以上學校總量發展規模與資源條件標準」附表五所定基準」兩個下拉選單

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -173,9 +173,9 @@
 							</div>
 						</div>
 						<div class="row">
-							<div id="eduCheckFailedForm" class="form-group col-6">
+							<div id="moeCheckFailedForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">是否經教育部查核被列為持續列管或不通過*</label>
-								<select class="form-control" id="eduCheckFailed">
+								<select class="form-control" id="moeCheckFailed">
 									<option value="N">否</option>
 									<option value="Y">為持續列管或不通過</option>
 								</select>
