--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -168,7 +168,7 @@
 						</div>
 						<div class="row">
 							<div id="moeCheckFailedForm" class="form-group col-6">
-								<label class="form-control-label text-danger" for="">是否經教育部查核被列為持續列管或不通過*</label>
+								<label class="form-control-label text-danger" for=""><br />是否經教育部查核被列為持續列管或不通過*</label>
 								<select class="form-control" id="moeCheckFailed">
 									<option value="N">否</option>
 									<option value="Y">為持續列管或不通過</option>
