--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -10,43 +10,36 @@
 </div>
 <hr />
 <div class="row">
-	<div class="col-3">
-		<div class="form-group">
-			<small id="" class="form-text text-muted">本年度可招生總量</small>
-			<input type="text" class="form-control allowTotal quota" disabled>
-		</div>
-	</div>
-	<span class="operator">＝</span>
 	<div class="col-2">
 		<div class="form-group">
-			<small id="" class="form-text text-muted">去年招生名額 * 10%</small>
+			<small id="" class="form-text text-muted">107 總量 * 10%</small>
 			<input type="text" class="form-control last_year_admission_amount quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div class="col-2">
 		<div class="form-group">
-			<small id="" class="form-text text-muted">去年本地生招生缺額數</small>
+			<small id="" class="form-text text-muted">107 本地生招生缺額</small>
 			<input type="text" class="form-control last_year_surplus_admission_quota quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div class="col-2">
 		<div class="form-group">
-			<small id="" class="form-text text-muted">本年度教育部核准擴增名額</small>
+			<small id="" class="form-text text-muted">107擴增名額</small>
 			<input type="text" class="form-control ratify_expanded_quota quota" disabled>
+		</div>
+	</div>
+	<span class="operator">＝</span>
+	<div class="col-3">
+		<div class="form-group">
+			<small id="" class="form-text text-muted">108 僑生招生總量</small>
+			<input type="text" class="form-control allowTotal quota" disabled>
 		</div>
 	</div>
 </div>
 <!-- 碩博only -->
 <div class="row masterOnly phdOnly hide">
-	<div class="col-3">
-		<div class="form-group">
-			<small id="" class="form-text text-muted">本年度欲招募總量</small>
-			<input type="text" class="form-control quota wantTotal" disabled>
-		</div>
-	</div>
-	<span class="operator">＝</span>
 	<div class="col-2">
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度聯招小計</small>
@@ -56,112 +49,119 @@
 	<span class="operator">＋</span>
 	<div class="col-2">
 		<div class="form-group">
-			<small id="" class="form-text text-muted">本年度自招小計</small>
+			<small id="" class="form-text text-muted">本年度單招小計</small>
 			<input type="text" class="form-control selfSum quota" disabled>
+		</div>
+	</div>
+	<span class="operator">＝</span>
+	<div class="col-3">
+		<div class="form-group">
+			<small id="" class="form-text text-muted">總計</small>
+			<input type="text" class="form-control quota wantTotal" disabled>
 		</div>
 	</div>
 </div>
 <!-- 學only -->
 <div class="row bacheOnly hide">
-	<div class="col-3">
-		<div class="form-group">
-			<small id="" class="form-text text-muted">本年度欲招募總量</small>
-			<input type="text" class="form-control quota wantTotal" disabled>
-		</div>
-	</div>
-	<span class="operator">＝</span>
-	<div class="col-1">
+	<div style="width:9%; margin-left:15px"><!--class="col-1"-->
 		<div class="form-group">
 			<small class="form-text text-muted">學士班個人申請</small>
 			<input type="text" class="form-control bg-info quota admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
-	<div class="col-1">
+	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">學士班聯合分發</small>
 			<input type="text" class="form-control bg-info quota admission_placement_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
-	<div class="col-1">
+	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-muted">港二技個人申請</small>
+			<small id="" class="form-text text-muted">港二技</small>
 			<input type="text" class="form-control bg-info quota another_department_admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
-	<div class="col-1">
+	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-danger">學士班自招*</small>
+			<small id="" class="form-text text-danger">單招*</small>
 			<input type="number" min="0" class="form-control bg-success quota self_enrollment_quota required">
 		</div>
 	</div>
 	<span class="operator">＋</span>
-	<div class="col-1">
+	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">港二技自招</small>
 			<input type="text" class="form-control bg-success quota another_department_self_enrollment_quota" disabled>
 		</div>
 	</div>
-</div>
-<!-- 二only -->
-<div class="row twoYearOnly hide">
+	<span class="operator">＝</span>
 	<div class="col-3">
 		<div class="form-group">
-			<small id="" class="form-text text-muted">本年度欲招募總量</small>
+			<small id="" class="form-text text-muted">總計</small>
 			<input type="text" class="form-control quota wantTotal" disabled>
 		</div>
 	</div>
-	<span class="operator">＝</span>
-	<div class="col-1">
+</div>
+<!-- 二only -->
+<div class="row twoYearOnly hide">
+	<div style="width:9%; margin-left:15px"> <!--class="col-1"-->
 		<div class="form-group">
 			<small class="form-text text-muted">學士班個人申請</small>
 			<input type="text" class="form-control bg-info quota another_department_admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
-	<div class="col-1">
+	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">學士班聯合分發</small>
 			<input type="text" class="form-control bg-info quota another_department_admission_placement_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
-	<div class="col-1">
+	<div style="width:9%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-muted">港二技個人申請</small>
+			<small id="" class="form-text text-muted">港二技</small>
 			<input type="text" class="form-control bg-info quota admission_selection_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
-	<div class="col-1">
+	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-muted">學士班自招</small>
+			<small id="" class="form-text text-muted">單招</small>
 			<input type="text" class="form-control bg-success quota another_department_self_enrollment_quota" disabled>
 		</div>
 	</div>
 	<span class="operator">＋</span>
-	<div class="col-1">
+	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">港二技自招</small>
 			<input type="text" class="form-control bg-success quota self_enrollment_quota" disabled>
+		</div>
+	</div>
+	<span class="operator">＝</span>
+	<div class="col-3">
+		<div class="form-group">
+			<small id="" class="form-text text-muted">總計</small>
+			<input type="text" class="form-control quota wantTotal" disabled>
 		</div>
 	</div>
 </div>
 <!-- 學二only -->
 <div class="row bacheOnly twoYearOnly hide">
 	<span>　</span>
-	<div class="col-3 offset-3">
+	<div style="width:33%;"> <!--class="col-3 "-->
 		<div class="form-group">
 			<small id="" class="form-text text-muted">本年度聯招小計</small>
 			<input type="text" class="form-control bg-info quota admissionSum" disabled>
 		</div>
 	</div>
 	<span>　　　</span>
-	<div class="col-2">
+	<div style="width:19%;"> <!--class="col-2"-->
 		<div class="form-group">
-			<small id="" class="form-text text-muted">本年度自招小計</small>
+			<small id="" class="form-text text-muted">本年度單招小計</small>
 			<input type="text" class="form-control bg-success quota selfSum" disabled>
 		</div>
 	</div>
