--- a/components/deptInfoForm/_quotaBachelor.ejs
+++ b/components/deptInfoForm/_quotaBachelor.ejs
@@ -1,7 +1,7 @@
 <!-- 僅在 學士 時顯示 -->
-<div class="row">
+<div class="row" style="display:none">
 	<div class="form-group col-4">
-		<label for="">海外聯合招生管道人數</label>
+		<label for="">海外聯合招管道名額數</label>
 		<input type="text" class="form-control" id="admissionTotalQuota" disabled>
 	</div>
 	<div class="form-group col-1">
@@ -24,7 +24,7 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" style="display:none">
 	<div class="form-group col-12" id="decreaseReasonOfAdmissionPlacementForm">
 		<label class="form-control-label" for="">聯合分發人數減招原因</label>
 		<textarea class="form-control" rows="3" id="decreaseReasonOfAdmissionPlacement"></textarea>
