--- a/components/deptInfoForm/_quotaOthers.ejs
+++ b/components/deptInfoForm/_quotaOthers.ejs
@@ -5,7 +5,7 @@
 		<input type="text" class="form-control" id="admissionSelectionQuota" disabled>
 	</div>
 	<div class="form-group col-6" id="selfEnrollmentQuotaForm">
-		<label class="form-control-label" for="">單獨招收僑生（自招）人數</label>
+		<label class="form-control-label" for="">單獨招收僑生或港澳生（單招）人數</label>
 		<input type="text" class="form-control" id="selfEnrollmentQuota">
 	</div>
 </div>
