--- a/components/deptInfoForm/_selfEnrollmentOthers.ejs
+++ b/components/deptInfoForm/_selfEnrollmentOthers.ejs
@@ -1,5 +1,5 @@
 <!-- 僅在 學士、碩士、博士 時顯示 -->
-<div class="row">
+<div class="row" style="display:none">
 	<div class="col">
 		<div class="card">
 			<div class="card-header bg-primary text-white">
