--- a/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
+++ b/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
@@ -7,11 +7,14 @@
 			</div>
 			<div class="card-block">
 				<form>
-					<div class="form-check">
+					<div class="form-check" style="display:none">
 						<label class="form-check-label">
 							<input class="form-check-input" type="checkbox" id="schoolHasSelfEnrollment" disabled>
 							本校是否可單獨招收僑生（自招）（若是，請勾選）
 						</label>
+					</div>
+					<div id="hasSelfEnrollmentText" style="padding-bottom: 2%;">
+
 					</div>
 					<div class="form-check">
 						<label class="form-check-label">
