--- a/index.ejs
+++ b/index.ejs
@@ -147,7 +147,7 @@
 						<div class="form-group col-9">
 							<div class="input-group">
 								<span class="input-group-addon"><input id="hasFiveYearStudentAllowed" type="checkbox"></span>
-								<input type="text" class="form-control" value="學則有無納入中五生、『增加畢業學分』或『延長修業年限』等修業規範" disabled>
+								<input type="text" class="form-control" value="學則有無納入中五生『增加畢業學分』或『延長修業年限』等修業規範" disabled>
 							</div>
 						</div>
 					</div>
@@ -176,7 +176,7 @@
 		<div class="form-group col-12">
 			<div class="card">
 				<div class="card-header bg-primary text-white">
-					單獨招收僑生禍港澳生（簡稱單招）
+					單獨招收僑生或港澳生（簡稱單招）
 				</div>
 				<div class="card-block">
 					<div class="row">
