--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -184,7 +184,7 @@
 					<th>代碼</th>
 					<th>名稱</th>
 					<th style="width: 150px;">個人申請人數</th>
-					<th style="width: 125px;">餘額留用 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="個人申請分發後之餘額將流到聯合分發；聯合分發共5梯次，每梯次分發後之餘額將流用至下一梯次"></i></th>
+					<th style="width: 125px;">餘額流用 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="個人申請分發後之餘額將流到聯合分發；聯合分發共5梯次，每梯次分發後之餘額將流用至下一梯次"></i></th>
 					<th style="width: 150px;">聯合分發人數</th>
 					<th style="width: 100px;">參考值 <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false" title="聯合分發人數不得低於參考值"></i></th>
 					<th style="width: 150px;">減招原因</th>
