--- a/index.ejs
+++ b/index.ejs
@@ -147,13 +147,13 @@
 						<div class="form-group col-9">
 							<div class="input-group">
 								<span class="input-group-addon"><input id="hasFiveYearStudentAllowed" type="checkbox"></span>
-								<input type="text" class="form-control" value="學則有無納入中五生『增加畢業學分』或『延長修業年限』等修業規範" disabled>
+								<input type="text" class="form-control" value="學則有無納入中五生『增加畢業學分』或『延長修業年限』等修業規範（如『有』請勾選，『無』則免勾）" disabled>
 							</div>
 						</div>
 					</div>
 					<div class="row">
 						<div id="ruleOfFiveYearStudentForm" class="form-group col-12">
-							<label class="form-control-label text-danger" for="">本校學則知『中五生招生規範』相關條次及規定如下*</label>
+							<label class="form-control-label text-danger" for="">本校學則之『中五生招生規範』相關條次及規定如下*</label>
 							<textarea id="ruleOfFiveYearStudent" type="text" class="form-control" rows="3"></textarea>
 						</div>
 					</div>
