--- a/components/deptInfoForm/_quotaOthers.ejs
+++ b/components/deptInfoForm/_quotaOthers.ejs
@@ -1,10 +1,10 @@
 <!-- 僅在 碩、博、二技 時顯示 -->
 <div class="row">
 	<div class="form-group col-6" id="admissionSelectionQuotaForm">
-		<label class="form-control-label" for="">個人申請人數</label>
+		<label class="form-control-label" for="" id="quotaOtherLabel"></label>
 		<input type="text" class="form-control" id="admissionSelectionQuota" disabled>
 	</div>
-	<div class="form-group col-6" id="selfEnrollmentQuotaForm">
+	<div class="form-group col-6" id="selfEnrollmentQuotaForm" style="display:none;">
 		<label class="form-control-label" for="">單獨招收僑生或港澳生（單招）人數</label>
 		<input type="text" class="form-control" id="selfEnrollmentQuota">
 	</div>
