更新名額調查可以修改的部份(港二技目前是壞的)

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -130,15 +130,15 @@
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-muted">單招</small>
-			<input type="text" class="form-control bg-success quota another_department_self_enrollment_quota" disabled>
+			<small id="" class="form-text text-danger">單招*</small>
+			<input type="number" min="0" class="form-control bg-success quota another_department_self_enrollment_quota required">
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
-			<small id="" class="form-text text-muted">港二技單招</small>
-			<input type="text" class="form-control bg-success quota self_enrollment_quota" disabled>
+			<small id="" class="form-text text-danger">港二技單招*</small>
+			<input type="number" min="0" class="form-control bg-success quota self_enrollment_quota required">
 		</div>
 	</div>
 	<span class="operator">＝</span>
