港二技名額可動，但是還不能送出

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -131,14 +131,14 @@
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-danger">單招*</small>
-			<input type="number" min="0" class="form-control bg-success quota another_department_self_enrollment_quota required">
+			<input type="number" min="0" class="form-control bg-success quota another_department_self_enrollment_quota twoyear required">
 		</div>
 	</div>
 	<span class="operator">＋</span>
 	<div style="width:8%;"> <!--class="col-1"-->
 		<div class="form-group">
 			<small id="" class="form-text text-danger">港二技單招*</small>
-			<input type="number" min="0" class="form-control bg-success quota self_enrollment_quota required">
+			<input type="number" min="0" class="form-control bg-success quota self_enrollment_quota twoyear required">
 		</div>
 	</div>
 	<span class="operator">＝</span>
