修正名額分配單招人數值顯示

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -222,10 +222,8 @@
 					<th>#</th>
 					<th>代碼</th>
 					<th>名稱</th>
-					<th style="width: 150px" class="text-center">聯招名額</th>
+					<th style="width: 150px" class="text-center">聯招名額數</th>
 					<th style="width: 100px" class="text-center">是否單招</th>
-					<th style="width: 150px" class="text-center">單招名額</th>
-					<th style="width: 150px" class="text-center">小計</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -276,7 +274,6 @@
 	</div>
 </div>
 
-<% if(system != '港二技') { -%>
 <div class="row">
 	<div class="col-12 text-center">
 		<button id="btn-save" data-action="save" class="btn btn-primary">
@@ -284,6 +281,5 @@
 		</button>
 	</div>
 </div>
-<% } -%>
 
 <script src="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.js"></script>
