把港二技的單招調查也移到外面來

--- a/components/_quotaDistribution.ejs
+++ b/components/_quotaDistribution.ejs
@@ -222,8 +222,13 @@
 					<th>#</th>
 					<th>代碼</th>
 					<th>名稱</th>
+                    <th style="width: 150px" class="text-center">是否開設日間二技學制</th>
+                    <th style="width: 100px" class="text-center">是否單招</th>
+                    <th style="width: 100px" class="text-center">是否開設僑生專班</th>
+                    <th style="width: 100px" class="text-center">開設專班文號</th>
+                    <th style="width: 100px" class="text-center">開設專班文件電子檔</th>
 					<th style="width: 150px" class="text-center">聯招名額數</th>
-					<th style="width: 100px" class="text-center">是否單招</th>
+
 				</tr>
 			</thead>
 			<tbody>
