移除港二技系所編輯區塊內的單招資料選項

--- a/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
+++ b/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
@@ -1,5 +1,5 @@
 <!-- 僅在 二技 時顯示 -->
-<div class="row">
+<div class="row" style="display:none">
 	<div class="col">
 		<div class="card">
 			<div class="card-header bg-primary text-white">
