--- a/login.ejs
+++ b/login.ejs
@@ -15,17 +15,21 @@
 		<form>
 			<div class="form-group">
 				<div class="input-group">
-					<span class="input-group-addon" id="basic-addon1">
-						<i class="fa fa-user" aria-hidden="true"></i>
-					</span>
+					<div class="input-group-prepend">
+						<div class="input-group-text">
+							<i class="fa fa-user" aria-hidden="true"></i>
+						</div>
+					</div>
 					<input type="text" id="username" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
 				</div>
 			</div>
 			<div class="form-group">
 				<div class="input-group">
-					<span class="input-group-addon" id="basic-addon1">
-						<i class="fa fa-unlock-alt" aria-hidden="true"></i>
-					</span>
+					<div class="input-group-prepend">
+						<div class="input-group-text">
+							<i class="fa fa-unlock-alt" aria-hidden="true"></i>
+						</div>
+					</div>
 					<input type="password" id="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
 				</div>
 			</div>
