--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -14,7 +14,7 @@
 		<div id="sidebar">
 			<div class="row">
 				<div class="col-xl-3">
-					<img src="./img/logo.png" alt="overseas" width="100%">
+					<img src="/img/logo.png" alt="overseas" width="100%">
 				</div>
 				<div class="col-xl-9">
 					<small>海外聯招會委員學校平台</small><br />
