--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -91,7 +91,11 @@
 						<div class="row">
 							<div id="sortOrderForm" class="form-group col-6">
 								<div class="input-group">
-									<span class="input-group-addon">簡章順序</span>
+									<div class="input-group-prepend">
+										<div class="input-group-text">
+											簡章順序
+										</div>
+									</div>
 									<input type="text" class="form-control" id="sortOrder">
 								</div>
 							</div>
@@ -99,14 +103,22 @@
 						<div class="row">
 							<div class="form-group col-6">
 								<div class="input-group">
-									<span class="input-group-addon">系所代碼</span>
+									<div class="input-group-prepend">
+										<div class="input-group-text">
+											系所代碼
+										</div>
+									</div>
 									<input type="text" class="form-control" id="id" disabled>
 								</div>
 							</div>
 							<% if(system == 'bachelor') { -%>
 								<div class="form-group col-6">
 									<div class="input-group">
-										<span class="input-group-addon">讀卡代碼</span>
+										<div class="input-group-prepend">
+											<div class="input-group-text">
+												讀卡代碼
+											</div>
+										</div>
 										<input type="text" class="form-control" id="cardCode" disabled>
 									</div>
 								</div>
@@ -225,50 +237,60 @@
 									<div class="card-header bg-primary text-white">
 										系組招生規定
 									</div>
-									<div class="card-block">
-											<div class="form-check" style="display:none">
-												<label class="form-check-label">
-													<input class="form-check-input" type="checkbox" id="hasForeignSpecialClass" value="">
-													是否招收外生專班（若是，請勾選）
-												</label>
-											</div>
-											<div class="form-check">
-												<label class="form-check-label">
-													<input class="form-check-input" type="checkbox" id="hasEngTaught" value="">
-													是否為全英文授課（若是，請勾選）
-												</label>
-											</div>
-											<div class="form-check" style="display:none">
-												<label class="form-check-label">
-													<input class="form-check-input" type="checkbox" id="hasDisabilities" value="">
-													是否招收身障學生
-												</label>
-											</div>
-											<div class="form-check" style="display:none">
-												<label class="form-check-label">
-													<input class="form-check-input" type="checkbox" id="hasBuHweiHwaWen" value="">
-													是否招收不具華文基礎學生（若是，請勾選）
-												</label>
-											</div>
-											<div class="form-check">
-												<label class="form-check-label">
-													<input class="form-check-input" type="checkbox" id="hasBirthLimit" value="">
-													有無年齡限制（若有，請勾選，並填列以下出生日期）
-												</label>
-											</div>
+									<div class="card-body">
+										<div class="card-block">
+												<div class="form-check" style="display:none">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" id="hasForeignSpecialClass" value="">
+														是否招收外生專班（若是，請勾選）
+													</label>
+												</div>
+												<div class="form-check">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" id="hasEngTaught" value="">
+														是否為全英文授課（若是，請勾選）
+													</label>
+												</div>
+												<div class="form-check" style="display:none">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" id="hasDisabilities" value="">
+														是否招收身障學生
+													</label>
+												</div>
+												<div class="form-check" style="display:none">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" id="hasBuHweiHwaWen" value="">
+														是否招收不具華文基礎學生（若是，請勾選）
+													</label>
+												</div>
+												<div class="form-check">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" id="hasBirthLimit" value="">
+														有無年齡限制（若有，請勾選，並填列以下出生日期）
+													</label>
+												</div>
 
-										<hr>
-										<p>限制出生日期</p>
-										<div class="form-inline">
-											<div id="birthLimitAfterForm" class="input-group mb-2 mr-sm-2 mb-sm-0">
-												<input type="text" class="form-control datepicker" id="birthLimitAfter">
-												<div class="input-group-addon">以後</div>
+											<hr>
+											<p>限制出生日期</p>
+											<div class="form-inline">
+												<div id="birthLimitAfterForm" class="input-group mb-2 mr-sm-2 mb-sm-0">
+													<input type="text" class="form-control datepicker" id="birthLimitAfter">
+													<div class="input-group-prepend">
+														<div class="input-group-text">
+															以後
+														</div>
+													</div>
+												</div>
 											</div>
-										</div>
-										<div class="form-inline" style="padding-top: 20px;">
-											<div id="birthLimitBeforeForm" class="input-group mb-2 mr-sm-2 mb-sm-0">
-												<input type="text" class="form-control datepicker" id="birthLimitBefore">
-												<div class="input-group-addon">以前</div>
+											<div class="form-inline" style="padding-top: 20px;">
+												<div id="birthLimitBeforeForm" class="input-group mb-2 mr-sm-2 mb-sm-0">
+													<input type="text" class="form-control datepicker" id="birthLimitBefore">
+													<div class="input-group-prepend">
+														<div class="input-group-text">
+															以前
+														</div>
+													</div>
+												</div>
 											</div>
 										</div>
 									</div>
@@ -285,24 +307,26 @@
 										<div class="card-header bg-primary text-white">
 											審查費用
 										</div>
-										<div class="card-block">
-											<form>
-												<div class="form-check">
-													<label class="form-check-label">
-														<input class="form-check-input" type="checkbox" id="hasReviewFee" value="">
-														是否需要收審查費用（若是，請勾選）
-													</label>
-												</div>
-												<hr>
-												<div id="reviewFeeDetailForm" class="form-group">
-													<label class="form-control-label" for="">審查費用中文說明</label>
-													<textarea class="form-control" rows="3" id="reviewFeeDetail"></textarea>
-												</div>
-												<div id="engReviewFeeDetailForm" class="form-group">
-													<label class="form-control-label" for="">審查費用英文說明</label>
-													<textarea class="form-control" rows="3" id="engReviewFeeDetail"></textarea>
-												</div>
-											</form>
+										<div class="card-body">
+											<div class="card-block">
+												<form>
+													<div class="form-check">
+														<label class="form-check-label">
+															<input class="form-check-input" type="checkbox" id="hasReviewFee" value="">
+															是否需要收審查費用（若是，請勾選）
+														</label>
+													</div>
+													<hr>
+													<div id="reviewFeeDetailForm" class="form-group">
+														<label class="form-control-label" for="">審查費用中文說明</label>
+														<textarea class="form-control" rows="3" id="reviewFeeDetail"></textarea>
+													</div>
+													<div id="engReviewFeeDetailForm" class="form-group">
+														<label class="form-control-label" for="">審查費用英文說明</label>
+														<textarea class="form-control" rows="3" id="engReviewFeeDetail"></textarea>
+													</div>
+												</form>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -316,105 +340,113 @@
 										<div class="card-header bg-primary text-white">
 												{{type.name + "（若需要此項目，請勾選）"}}
 										</div>
-										<div class="card-block">
-											<div class="row">
-												<div class="col-lg-6">
-													<div class="form-group">
-														<div class="input-group">
-															<span class="input-group-addon">
-																<input type="checkbox" v-model="type.needed" v-bind:disabled="!type.modifiable">
-															</span>
-															<input
-															type="text"
-															class="form-control"
-															style="background-color: white;"
-															v-bind:value="type.name"
-															disabled>
-														</div>
-													</div>
-												</div>
-												<div class="col-lg-6">
-													<div class="form-group">
-														<div class="input-group">
-															<span class="input-group-addon">
-																<input type="checkbox" v-model="type.required" v-bind:disabled="!type.modifiable || !type.needed">
-															</span>
-															<input
-															type="text"
-															class="form-control"
-															style="background-color: white;"
-															value="是否設為必繳資料（若是，請勾選）"
-															disabled>
-														</div>
-													</div>
-												</div>
-											</div>
-
-											<!-- 如果是師長推薦函 -->
-											<!-- 8 26 46 66 -->
-											<div v-if="type.id == 8 || type.id == 26 || type.id == 46 || type.id == 66">
+										<div class="card-body">
+											<div class="card-block">
 												<div class="row">
 													<div class="col-lg-6">
 														<div class="form-group">
 															<div class="input-group">
-																<span class="input-group-addon">
-																	<input type="checkbox" v-model="type.need_paper" v-bind:disabled="!type.needed">
-																</span>
+																<div class="input-group-prepend">
+																	<div class="input-group-text">
+																		<input type="checkbox" v-model="type.needed" v-bind:disabled="!type.modifiable">
+																	</div>
+																</div>
 																<input
 																type="text"
 																class="form-control"
 																style="background-color: white;"
-																value="是否需要紙本推薦函（若是，請勾選）"
+																v-bind:value="type.name"
+																disabled>
+															</div>
+														</div>
+													</div>
+													<div class="col-lg-6">
+														<div class="form-group">
+															<div class="input-group">
+																<div class="input-group-prepend">
+																	<div class="input-group-text">
+																		<input type="checkbox" v-model="type.required" v-bind:disabled="!type.modifiable || !type.needed">
+																	</div>
+																</div>
+																<input
+																type="text"
+																class="form-control"
+																style="background-color: white;"
+																value="是否設為必繳資料（若是，請勾選）"
 																disabled>
 															</div>
 														</div>
 													</div>
 												</div>
 
-												<div id="paper-form-div">
+												<!-- 如果是師長推薦函 -->
+												<!-- 8 26 46 66 -->
+												<div v-if="type.id == 8 || type.id == 26 || type.id == 46 || type.id == 66">
 													<div class="row">
-														<div class="form-group col-6" v-bind:class="{'has-danger': type.recipient_error}">
-															<label class="text-danger">收件人英文姓名*</label>
-															<input type="text" class="form-control" v-model="type.recipient" v-bind:disabled="!type.need_paper || !type.needed">
-														</div>
-														<div class="form-group col-6" v-bind:class="{'has-danger': type.recipient_phone_error}">
-															<label class="text-danger">聯絡電話*</label>
-															<input type="text" class="form-control" v-model="type.recipient_phone" v-bind:disabled="!type.need_paper || !type.needed">
+														<div class="col-lg-6">
+															<div class="form-group">
+																<div class="input-group">
+																	<div class="input-group-prepend">
+																		<div class="input-group-text">
+																			<input type="checkbox" v-model="type.need_paper" v-bind:disabled="!type.needed">
+																		</div>
+																	</div>
+																	<input
+																	type="text"
+																	class="form-control"
+																	style="background-color: white;"
+																	value="是否需要紙本推薦函（若是，請勾選）"
+																	disabled>
+																</div>
+															</div>
 														</div>
 													</div>
-													<div class="row">
-														<div class="form-group col-12" v-bind:class="{'has-danger': type.recieve_address_error}">
-															<label class="text-danger">英文收件地址*</label>
-															<input type="text" class="form-control" v-model="type.recieve_address" v-bind:disabled="!type.need_paper || !type.needed">
+
+													<div id="paper-form-div">
+														<div class="row">
+															<div class="form-group col-6" v-bind:class="{'has-danger': type.recipient_error}">
+																<label class="text-danger">收件人英文姓名*</label>
+																<input type="text" class="form-control" v-model="type.recipient" v-bind:disabled="!type.need_paper || !type.needed">
+															</div>
+															<div class="form-group col-6" v-bind:class="{'has-danger': type.recipient_phone_error}">
+																<label class="text-danger">聯絡電話*</label>
+																<input type="text" class="form-control" v-model="type.recipient_phone" v-bind:disabled="!type.need_paper || !type.needed">
+															</div>
 														</div>
-													</div>
-													<div class="row">
-														<div class="form-group col-6" v-bind:class="{'has-danger': type.recieve_email_error}">
-															<label class="text-danger">E-mail*</label>
-															<input type="email" class="form-control" v-model="type.recieve_email" v-bind:disabled="!type.need_paper || !type.needed">
+														<div class="row">
+															<div class="form-group col-12" v-bind:class="{'has-danger': type.recieve_address_error}">
+																<label class="text-danger">英文收件地址*</label>
+																<input type="text" class="form-control" v-model="type.recieve_address" v-bind:disabled="!type.need_paper || !type.needed">
+															</div>
 														</div>
-														<div class="form-group col-6" id="recieveDeadlineDiv">
-															<label class="text-danger">收件期限*</label>
-															<input id="recieveDeadline" type="text" class="form-control datepicker" v-bind:disabled="!type.need_paper || !type.needed">
+														<div class="row">
+															<div class="form-group col-6" v-bind:class="{'has-danger': type.recieve_email_error}">
+																<label class="text-danger">E-mail*</label>
+																<input type="email" class="form-control" v-model="type.recieve_email" v-bind:disabled="!type.need_paper || !type.needed">
+															</div>
+															<div class="form-group col-6" id="recieveDeadlineDiv">
+																<label class="text-danger">收件期限*</label>
+																<input id="recieveDeadline" type="text" class="form-control datepicker" v-bind:disabled="!type.need_paper || !type.needed">
+															</div>
 														</div>
 													</div>
 												</div>
-											</div>
 
-											<div class="row">
-												<div class="col-12">
-													<div class="form-group" v-bind:class="{'has-danger': type.error}">
-														<label class="form-control-label" for="">審查項目中文說明</label>
-														<textarea class="form-control" rows="3" v-model="type.description"></textarea>
+												<div class="row">
+													<div class="col-12">
+														<div class="form-group" v-bind:class="{'has-danger': type.error}">
+															<label class="form-control-label" for="">審查項目中文說明</label>
+															<textarea class="form-control" rows="3" v-model="type.description"></textarea>
+														</div>
 													</div>
 												</div>
-											</div>
 
-											<div class="row">
-												<div class="col-12">
-													<div class="form-group" v-bind:class="{'has-danger': type.engerror}">
-														<label for="">審查項目英文說明</label>
-														<textarea class="form-control" rows="3" v-model="type.eng_description"></textarea>
+												<div class="row">
+													<div class="col-12">
+														<div class="form-group" v-bind:class="{'has-danger': type.engerror}">
+															<label for="">審查項目英文說明</label>
+															<textarea class="form-control" rows="3" v-model="type.eng_description"></textarea>
+														</div>
 													</div>
 												</div>
 											</div>
